去除 memberValues